--- a/history.html
+++ b/history.html
@@ -99,6 +99,7 @@
         height: auto;
         margin-bottom: 20px;
 		border: none;
+	        margin-top: auto;
     }
     .car-license-close-button {
         width: 100px;
