--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         height: auto;
         margin-bottom: 20px;
         border: none;
+	margin-top: auto;
     }
     .car-license-close-button {
         width: 100px;
