--- a/teams.html
+++ b/teams.html
@@ -141,6 +141,7 @@
         height: auto;
         margin-bottom: 20px;
 		border: none;
+	        margin-top: auto;
     }
     .car-license-close-button {
         width: 100px;
